--- a/roles/ec2_instance_create_delete/meta/argument_specs.yml
+++ b/roles/ec2_instance_create_delete/meta/argument_specs.yml
@@ -4,8 +4,8 @@ argument_specs:
     short_description: A role to create an EC2 instance with optional networking resources.
     description:
       - A role to create an EC2 instance.
-      - Optionally can create a security group and associate an Elastic IP with the instance.
-      - Supports custom configurations for instance settings, including instance type, AMI, key pair, tags, VPC/subnet, and networking configurations.
+      - Can optionally attach security groups and associate an Elastic IP with the instance.
+      - Supports custom configurations for instance settings including instance type, AMI, key pair, tags, VPC/subnet, and networking configurations.
     options:
       ec2_instance_create_delete_operation:
         description:
@@ -14,11 +14,6 @@ argument_specs:
         type: str
         default: create
         choices: [create, delete]
-      ec2_instance_create_delete_aws_region:
-        description:
-          - The AWS region in which to create the EC2 instance.
-        required: true
-        type: str
       ec2_instance_create_delete_instance_name:
         description:
           - The name of the EC2 instance to be created.
@@ -26,22 +21,22 @@ argument_specs:
         type: str
       ec2_instance_create_delete_instance_type:
         description:
-          - The instance type for the EC2 instance.
-        required: true
+          - The instance type for the EC2 instance. Required when `ec2_instance_create_delete_operation` is `true`.
+        required: false
         type: str
       ec2_instance_create_delete_ami_id:
         description:
-          - The AMI ID for the EC2 instance.
-        required: true
+          - The AMI ID for the EC2 instance. Required when `ec2_instance_create_delete_operation` is `true`.
+        required: false
         type: str
       ec2_instance_create_delete_key_name:
         description:
-          - The name of the key pair to use for SSH access to the EC2 instance.
+          - The name of the key pair to use for SSH access to the EC2 instance. If the key does not exist, a key pair will be created with the name. If not provided, instance will not be accessible via SSH.
         required: false
         type: str
       ec2_instance_create_delete_vpc_subnet_id:
         description:
-          - The ID of the VPC subnet in which the instance will be launched.
+          - The ID of the VPC subnet in which the instance will be launched. If not provided, instance will be created in the default subnet for the default VPC in the AWS region, if present.
         required: false
         type: str
       ec2_instance_create_delete_tags:
@@ -49,66 +44,26 @@ argument_specs:
           - A dictionary of tags to assign to the EC2 instance.
         required: false
         type: dict
-      ec2_instance_create_delete_wait_for_boot:
+      ec2_instance_create_delete_wait_for_state:
         description:
-          - Whether to wait for the EC2 instance to be in the running state before continuing.
+          - Whether to wait for the EC2 instance to be in the running/terminated state before continuing.
         required: false
         default: true
         type: bool
+      ec2_instance_create_delete_associate_security_groups:
+        description:
+          - List of security group names or IDs to associate with the EC2 instance.
+        required: false
+        type: list
+        elements: str
       ec2_instance_create_delete_associate_eip:
         description:
           - Whether to create and associate an Elastic IP (EIP) with the EC2 instance.
         required: false
         default: false
         type: bool
-      ec2_instance_create_delete_associate_external_sg:
-        description:
-          - Whether to associate an existing or a new security group for external access.
-        required: false
-        default: false
-        type: bool
-      ec2_instance_create_delete_external_sg_name:
-        description:
-          - The name of the security group to create.
-        required: false
-        default: "ec2_instance_create-default-external-sg"
-        type: str
-      ec2_instance_create_delete_external_sg_description:
-        description:
-          - A description of the security group.
-        required: false
-        default: "Security group for external access"
-        type: str
-      ec2_instance_create_delete_external_sg_tags:
-        description:
-          - Tags to assign to the security group.
-        required: false
-        type: dict
-      ec2_instance_create_delete_associate_igw:
-        description:
-          - Whether to create and associate an internal gateway.
-        required: false
-        default: false
-        type: bool
-      ec2_instance_create_delete_vpc_id:
-        description:
-          - The ID of the VPC used for security group and internet gateway.
-          - This is required when `ec2_instance_create_delete_associate_external_sg` or `ec2_instance_create_delete_associate_igw` is `true`.
-        required: false
-        type: str
       ec2_instance_create_delete_eip_tags:
         description:
           - Tags to assign to the Elastic IP.
-        required: false
-        type: dict
-      ec2_instance_create_delete_external_sg_rules:
-        description:
-          - A list of dict containing custom rules to add to the security group. Each rule is a dictionary with `proto`, `ports`, and `cidr_ip` keys. Default is to allow SSH (port 22) from `0.0.0.0/0`.
-        required: false
-        type: list
-        elements: dict
-      ec2_instance_create_delete_igw_tags:
-        description:
-          - Tags to assign to the internet gateway.
         required: false
         type: dict
