--- a/extensions/patterns/configure_ec2/setup.yml
+++ b/extensions/patterns/configure_ec2/setup.yml
@@ -13,10 +13,10 @@ controller_projects:
   - name: AWS Operations / Configure EC2 Instance Pattern Project
     organization: "{{ organization | default('Default') }}"
     scm_branch: main
-    scm_clean: no
-    scm_delete_on_update: no
+    scm_clean: false
+    scm_delete_on_update: false
     scm_type: git
-    scp_update_on_launch: no
+    scm_update_on_launch: true
     scm_url: https://github.com/redhat-cop/cloud.aws_ops.git
 
 controller_templates:
