--- a/roles/manage_ec2_instance/tasks/ec2_instance_create_operations.yml
+++ b/roles/manage_ec2_instance/tasks/ec2_instance_create_operations.yml
@@ -27,7 +27,7 @@
         name: "{{ manage_ec2_instance_key_name }}"
         state: present
       when: key_info_result.keypairs | length == 0
-      register: new_key_pair_result
+      register: ec2_instance_manage_key_pair_result
 
 - name: Create EC2 instance with provided configuration
   amazon.aws.ec2_instance:
@@ -52,15 +52,15 @@
 - name: Get EC2 instance info
   amazon.aws.ec2_instance_info:
     instance_ids: "{{ ec2_instance.instance_ids[0] }}"
-  register: _ec2_instance
+  register: ec2_instance_manage_create_result
 
 - name: Output details of the created EC2 instance
   ansible.builtin.debug:
     msg:
       - "EC2 instance {{ ec2_instance.instance_ids[0] }} created successfully"
-      - "Instance details: {{ _ec2_instance.instances[0] }}"
+      - "Instance details: {{ ec2_instance_manage_create_result.instances[0] }}"
 
 - name: Output private key if a new keypair was created
-  when: new_key_pair_result.key is defined
+  when: ec2_instance_manage_key_pair_result.key is defined
   ansible.builtin.debug:
-    msg: "A new key pair was created for ssh access to the instance. Please save this private key for reference, it will not be accessible again: {{ new_key_pair_result.key.private_key }}"
+    msg: "A new key pair was created for ssh access to the instance. Please save this private key for reference: {{ ec2_instance_manage_key_pair_result.key.private_key }}"
