--- a/extensions/patterns/configure_ec2/template_rhdh/create_ec2_instance.yml
+++ b/extensions/patterns/configure_ec2/template_rhdh/create_ec2_instance.yml
@@ -36,13 +36,8 @@ spec:
           ui:field: AAPResourcePicker
         credentials:
           title: Credentials
-          description: Select credentials for accessing the nodes this job will be ran
-            against. You can only select one credential of each type. For
-            machine credentials (SSH), checking "Prompt on launch" without
-            selecting credentials will require you to select a machine
-            credential at run time. If you select credentials and check "Prompt
-            on launch", the selected credential(s) become the defaults that can
-            be updated at run time.
+          description: Select credentials for accessing AWS.
+            The credentials need to be of type "Amazon Web Services".
           type: array
           ui:field: AAPResourcePicker
           resource: credentials
