--- a/roles/manage_ec2_instance/tasks/ec2_instance_create_operations.yml
+++ b/roles/manage_ec2_instance/tasks/ec2_instance_create_operations.yml
@@ -21,6 +21,7 @@
         names:
           - "{{ manage_ec2_instance_key_name }}"
       register: key_info_result
+      no_log: true
 
     - name: Create new key pair
       amazon.aws.ec2_key:
@@ -28,6 +29,7 @@
         state: present
       when: key_info_result.keypairs | length == 0
       register: ec2_instance_manage_key_pair_result
+      no_log: true
 
 - name: Create EC2 instance with provided configuration
   amazon.aws.ec2_instance:
