--- a/extensions/patterns/configure_ec2/template_surveys/create_ec2_instance.yml
+++ b/extensions/patterns/configure_ec2/template_surveys/create_ec2_instance.yml
@@ -28,7 +28,7 @@ spec:
 
   - type: text
     question_name: Key Pair Name
-    question_description: Name of key pair to use or create for SSH access to the EC2 instance. Defaults to '{{ instance_name }}-key'
+    question_description: Name of key pair to use or create for SSH access to the EC2 instance. If the key does not exist, a key pair will be created with the name. If not provided, instance will not be accessible via SSH.
     variable: key_name
     required: false
 
