--- a/extensions/patterns/configure_ec2/playbooks/create_ec2_instance.yml
+++ b/extensions/patterns/configure_ec2/playbooks/create_ec2_instance.yml
@@ -14,10 +14,10 @@
       ansible.builtin.set_fact:
         final_sg_rules: "{{ create_external_access_resources | ternary(sg_rules_list + allow_external_access_sg_rules, sg_rules_list) }}"
 
-    - name: Validate key "{{ key_name }}" if given
+    - name: Validate key if given
       when: key_name is defined and key_name != ''
       block:
-        - name: Check if the key "{{ key_name }}" exists
+        - name: Check if the key exists
           amazon.aws.ec2_key_info:
             names:
               - "{{ key_name }}"
@@ -71,7 +71,7 @@
         manage_ec2_instance_associate_eip: "{{ create_external_access_resources }}"
         manage_ec2_instance_instance_tags: "{{ instance_tags | default('{}', true) | from_json }}"
 
-    - name: Warn if key "{{ key_name }} does not exist
+    - name: Warn if key does not exist
       ansible.builtin.debug:
         msg: "Warning: The key '{{ key_name }}' does not exist!"
       when: key_name is defined and key_info_result.keypairs | length == 0
