--- a/extensions/patterns/configure_ec2/exec_env/execution-environment.yml
+++ b/extensions/patterns/configure_ec2/exec_env/execution-environment.yml
@@ -22,8 +22,8 @@ dependencies:
 
 images:
   base_image:
-    name: docker.io/redhat/ubi9:latest
+    name: quay.io/centos/centos:stream9
 
 additional_build_steps:
   append_base: |
-    RUN yum install -y git
+    RUN yum install -y git python3.11
