--- a/extensions/patterns/configure_ec2/exec_env/execution-environment.yml
+++ b/extensions/patterns/configure_ec2/exec_env/execution-environment.yml
@@ -22,8 +22,8 @@ dependencies:
 
 images:
   base_image:
-    name: quay.io/centos/centos:stream9
+    name: registry.redhat.io/ubi9/ubi:latest
 
 additional_build_steps:
   append_base: |
-    RUN yum install -y git python3.11
+    RUN yum install -y git
