--- a/extensions/patterns/configure_ec2/exec_env/execution-environment.yml
+++ b/extensions/patterns/configure_ec2/exec_env/execution-environment.yml
@@ -22,7 +22,7 @@ dependencies:
 
 images:
   base_image:
-    name: registry.redhat.io/ubi9/ubi:latest
+    name: registry.access.redhat.com/ubi9/ubi:latest
 
 additional_build_steps:
   append_base: |
