--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -225,3 +225,19 @@ releases:
     - fix_rds_db_version.yml
     - readme_template_update.yml
     release_date: '2024-07-30'
+  3.1.0:
+    changes:
+      minor_changes:
+      - update FQCN for modules that were migrated from community.aws to amazon.aws
+        (https://github.com/redhat-cop/cloud.aws_ops/pull/120).
+      release_summary: This release adds a new role ``ec2_networking_resources`` and
+        a pattern for creating an ec2 instance.
+    fragments:
+    - 120-fix-tests.yml
+    - release_3_1_0.yml
+    objects:
+      role:
+      - description: A role to create a basic networking environment for an EC2 instance.
+        name: ec2_networking_resources
+        namespace: null
+    release_date: '2025-01-27'
