--- a/tests/integration/targets/test_enable_cloudtrail_encryption_with_kms/defaults/main.yml
+++ b/tests/integration/targets/test_enable_cloudtrail_encryption_with_kms/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # defaults file for tests/integration/targets/test_enable_cloudtrail_encryption_with_kms
-aws_security_token: '{{ security_token | default(omit) }}'
+aws_session_token: '{{ session_token | default(omit) }}'
 s3_bucket_name: "s3-{{ resource_prefix }}"
 cloudtrail_name: "trail-{{ resource_prefix }}"
 kms_alias: "kms-{{ resource_prefix }}"
