--- a/tests/integration/targets/test_manage_ec2_instance/defaults/main.yml
+++ b/tests/integration/targets/test_manage_ec2_instance/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-aws_security_token: "{{ security_token | default(omit) }}"
+aws_session_token: "{{ session_token | default(omit) }}"
 
 # Network Configuration
 test_vpc_name: "{{ resource_prefix }}-vpc"
