--- a/playbooks/webapp/migrate_webapp.yaml
+++ b/playbooks/webapp/migrate_webapp.yaml
@@ -59,7 +59,7 @@
         group/aws:
           aws_access_key: "{{ aws_access_key | default(omit) }}"
           aws_secret_key: "{{ aws_secret_key | default(omit) }}"
-          security_token: "{{ security_token | default(omit) }}"
+          session_token: "{{ session_token | default(omit) }}"
           region: "{{ dest_region }}"
       block:
         - name: Deploy app
