--- a/tests/integration/targets/test_awsconfig_detach_and_delete_internet_gateway/defaults/main.yml
+++ b/tests/integration/targets/test_awsconfig_detach_and_delete_internet_gateway/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # defaults file for awsconfig_detach_and_delete_internet_gateway
-aws_security_token: '{{ security_token | default(omit) }}'
+aws_session_token: '{{ session_token | default(omit) }}'
 test_image_filter:
   architecture: x86_64
   virtualization-type: hvm
