--- a/tests/integration/targets/test_move_objects_between_buckets/defaults/main.yml
+++ b/tests/integration/targets/test_move_objects_between_buckets/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 # defaults file for tests/integration/targets/test_moving_objects_between_buckets
 bucket_name: '{{ resource_prefix | hash("md5") }}'
-aws_security_token: '{{ security_token | default(omit) }}'
+aws_session_token: '{{ session_token | default(omit) }}'
