--- a/tests/integration/targets/test_upload_file_to_s3/validate.yaml
+++ b/tests/integration/targets/test_upload_file_to_s3/validate.yaml
@@ -11,7 +11,7 @@
       region: '{{ aws_region }}'
       aws_access_key: '{{ aws_access_key }}'
       aws_secret_key: '{{ aws_secret_key }}'
-      security_token: '{{ security_token | default(omit) }}'
+      session_token: '{{ session_token | default(omit) }}'
 
   tasks:
     - name: Create temporary file to download object content in
