--- a/playbooks/move_vm_from_on_prem_to_aws/move_vm_from_on_prem_to_aws.yml
+++ b/playbooks/move_vm_from_on_prem_to_aws/move_vm_from_on_prem_to_aws.yml
@@ -6,7 +6,7 @@
     group/aws:
       aws_access_key: "{{ aws_access_key | default(omit) }}"
       aws_secret_key: "{{ aws_secret_key | default(omit) }}"
-      session_token: "{{ session_token | default(omit) }}"
+      session_token: "{{ security_token | default(omit) }}"
       region: "{{ aws_region | default('us-east-1') }}"
 
   tasks:
