--- a/playbooks/upload_file_to_s3.yaml
+++ b/playbooks/upload_file_to_s3.yaml
@@ -7,7 +7,7 @@
     group/aws:
       aws_access_key: "{{ aws_access_key | default(omit) }}"
       aws_secret_key: "{{ aws_secret_key | default(omit) }}"
-      session_token: "{{ aws_session_token | default(omit) }}"
+      session_token: "{{ aws_security_token | default(omit) }}"
       profile: "{{ aws_profile | default(omit) }}"
 
   tasks:
