--- a/playbooks/webapp/webapp.yaml
+++ b/playbooks/webapp/webapp.yaml
@@ -20,7 +20,7 @@
         group/aws:
           aws_access_key: "{{ aws_access_key | default(omit) }}"
           aws_secret_key: "{{ aws_secret_key | default(omit) }}"
-          session_token: "{{ session_token | default(omit) }}"
+          session_token: "{{ security_token | default(omit) }}"
           region: "{{ region | default(aws_region) }}"
       block:
         - name: Deploy app
