--- a/roles/aws_setup_credentials/tasks/read_option.yml
+++ b/roles/aws_setup_credentials/tasks/read_option.yml
@@ -3,7 +3,7 @@
   ansible.builtin.set_fact:
     aws_setup_credentials__item_key: "{{ ('dest' in item.value) | ternary(item.value.dest, item.key) }}"
     aws_setup_credentials__item_value: "{{ lookup('vars', item.key, default='') }}"
-  #no_log: true
+  no_log: true
 
 - name: Combine user-defined variable
   ansible.builtin.set_fact:
