--- a/roles/awsconfig_apigateway_with_lambda_integration/tasks/main.yml
+++ b/roles/awsconfig_apigateway_with_lambda_integration/tasks/main.yml
@@ -3,8 +3,10 @@
   module_defaults:
     group/aws: "{{ aws_setup_credentials__output }}"
   block:
-    - name: "Include file {{ item }}"
+    - name: Include file
       ansible.builtin.include_tasks: '{{ item }}'
-      with_items:
+      loop:
         - lambda.yml
         - apigateway.yml
+      loop_control:
+        label: "{{ item }}"
